--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.photo_gallery">
    <application
-        android:label="photo_gallery"
+        android:label="Photo Gallery"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
